k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dob-backend-service
  namespace: dob
spec:
  selector:
    app: dob-backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
